--- a/index.css
+++ b/index.css
@@ -76,7 +76,7 @@ button {
     align-items: center;
     background-color: var(--dark-bg);
     padding: 15vh 12.5vw;
-    gap: 2vw
+    gap: 2vw;
 }
 
 .intro .text {
@@ -116,7 +116,7 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10vh 10vw;
+    padding: 10vh 15vw;
     margin: 0;
 }
 
@@ -138,7 +138,7 @@ button {
 .content_box {
     display: flex;
     flex-direction: column;
-    width: 200px;
+    width: 175px;
 }
 
 .content_image {
